[metadata]
name = mnt-france-generator
version = 1.0.0
author = MNT Contributors
description = Application pour générer les Modèles Numériques de Terrain (MNT) de la France par département
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/mnt-france-generator
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: GIS

[options]
python_requires = >=3.8
include_package_data = True
packages = find:

[options.packages.find]
where = .

[flake8]
max-line-length = 100
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg-info,
    .streamlit
ignore = E203, W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --tb=short
